# secure-transfer

./: .gitignore  Cargo.toml  README.md  implementation_plan.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  history.rs  main.rs  ui.rs
src/crypto/: certs.rs
src/discovery/: advertise.rs  browse.rs  mod.rs
src/transfer/: downloader.rs  mod.rs  protocol.rs  receiver.rs  sender.rs
